test/files/pos/t12159/M.java
// javaVersion: 17+

package p;

public final class M extends J {
}

final class N extends L {
}
