test/files/neg/t8700b-new/Foo_1.java
// javaVersion: 17+
public enum Foo_1 {
    A,
    B
}
